# docs/openapi.yaml
@@ -186,8 +186,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  base_price:
-                    $ref: '#/components/schemas/BasePrice'
                   data:
                     type: array
                     items:
@@ -292,27 +290,17 @@ components:
           example: 99.9
         currency:
           $ref: '#/components/schemas/Currency'
+        is_base_price:
+          type: boolean
+          example: false
         created_at:
           type: string
           format: date-time
+          nullable: true
         updated_at:
           type: string
           format: date-time
-    BasePrice:
-      type: object
-      properties:
-        product_id:
-          type: integer
-          example: 10
-        currency_id:
-          type: integer
-          example: 1
-        price:
-          type: number
-          format: float
-          example: 29.99
-        currency:
-          $ref: '#/components/schemas/Currency'
+          nullable: true
     Product:
       type: object
       properties:
